# Movie-Ratings-Data-Analysis---Intro-to-DS

./: README.md  pyproject.toml
movie_rating_project/: movie_rating_test.ipynb
