[tool.poetry]
name = "movie-rating-project"
version = "0.1.0"
description = ""
authors = ["Zitong Luo <luozt20@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
